smoof v1.4 (Release data: xxxx-xx-xx)
============

* overworked and refactored autoplot functions
  * dropped use.facets parameter (always use facets now if discrete parameters exist)
  * We now support mixed functions with up to two numeric params (or one numeric vector
    param of length 2) and up to 2 discrete/logical (or a corresponding vector param)

smoof v1.3 (Release data: 2016-02-23)
============

* Modified: function name is optional now
* Added optional reference point ref.point for multi-objective functions
  - Reference point for ZDT functions is (11, 11)
  - Reference point for DTLZ function family is r = (11, ...,  11) with #r = #objectives
  - Added getter getRefPoint
* Added possibility to pass the true mean function of a noisy function, i.e., the
  "unnoisy" via the smoof parameter fn.mean
  - Added getter getMeanFunction
* makeMPM2Function now has additional parameters rotated and peak.shape

smoof v1.2 (Release data: 2016-01-21)
============

* Added: functions convertToMaximization and convertToMinimization
* Added: main parameter for plot and autoplot. By default the function name is
  used for the plot title.
* Fixed: autoplot and plot do not work for wrapped functions.
* objective functions now can be passed an additional id attribute. All predefined
  smoof functions have an id now.
* visualizeParetoOptimalFront now works for bi-objective functions with arbitrary
  search space dimensions and works by calling the mco::nsga2 algorithm. Due to
  this, the parameters show.only.front, limits.by.front are dropped.
* Renamed makeFunctionByName to makeFunctionsByName
* Added tags 'single-objective' and 'multi-objective'
* filterFunctionByTags now stops if both 'single-objective' and 'multi-objective'
  tags are passed
* All functions now check the passed paramter to be of the right dimension and
  type
* makeFunctionsByName now expects a character vector generator names (the list
  methods was removed)